--- a/pom.xml
+++ b/pom.xml
@@ -39,3 +39,4 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
         </plugin>
     </plugins>
 </build>
+</project>
