--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 <version>1.0-SNAPSHOT</version>
 <packaging>jar</packaging>
 <description>blah blah</description>
+<pluginRepositories>
+   <pluginRepository>
+      <id>SmartBearPluginRepository</id>
+      <url>http://smartbearsoftware.com/repository/maven2</url>
+   </pluginRepository>
+</pluginRepositories>
+
 <build>
     <plugins>
         <plugin>
